test/stg/error/topLevel.stg
-- Duplicate function definitions (identifiers)
badArgs = FUN(x y -> y);
badArgs = FUN(x y -> y);
